[package]
name = "destru"
version = "2.0.0"
edition = "2024"
authors = [ "KKW557 <557@destru.org>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5", features=['http', 'axum', 'd1'] }
console_error_panic_hook = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"